# OBot-ACM

./: .env.example  .gitignore  .gitmodules  README.md  bot.py  config_example.json  entry.py  main.py  pyproject.toml  requirements.txt  robot.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  module-update.yml
lib/Color-Rand/: chinese_traditional.json
lib/How-To-Cook/style/: index.css
lib/Pick-One/: config_example.json
src/core/: constants.py  help_registry.py  plugin_loader.py  tools.py
src/core/bot/: command.py  decorator.py  interact.py  message.py  module.py  perm.py  transit.py
src/core/lib/: cf_rating_calc.py  huo_zi_yin_shua.py
src/core/util/: exception.py  img_transform.py  ntsilk.py  output_cached.py  silk_convert.py  tools.py
src/data/: cf_duel.py  data_cache.py  data_color_rand.py  data_contest_manual.py  data_duel_cf.py  data_how_to_cook.py  data_mc.py  data_oierdb.py  data_pick_one.py
src/data/model/: binding.py  json_storage.py  ptt_system.py
src/module/: __init__.py  atc.py  cf.py  color_rand.py  contest_manual.py  cron.py  how_to_cook.py  interact.py  maintain.py  nk.py  number_guess.py  peeper.py  pick_one.py  rand.py
src/module/cp/: atc.py  cf.py  contest_manual.py  contestant.py  cpcfinder.py  nk.py  oierdb.py  peeper.py
src/module/game/: guess_1a2b.py  guess_interval.py  tetris.py
src/platform/: model.py
src/plugins/: cron.py  simple_response.py
test/: file_output.py  test_module.py  test_platform.py  test_qrcode.py  test_render.py
unittest/: test_module.py  test_platform.py  test_qrcode.py  test_render.py
(+40 files in other folders)
