[project]
name = "OBot-ACM-Nonebot"
version = "v5.0.0-beta.1.nonebot"
description = "A.k.a. O宝的AC梦 · 算竞平台实时做题记录查询和更多功能"
readme = "README.md"
requires-python = ">=3.10, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "QQ", module_name = "nonebot.adapters.qq" }
]
plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_saa", "nonebot_plugin_localstore"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"